浏览器图标名称调整/初始化加载配置文件优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">自制浏览器</string>
-    <string name="btn_back">主页</string>
+    <string name="app_name">彼黍</string>
 </resources>
